<resources>
    <string name="app_name">CarsByJamal</string>
    <string name="hello_world">Hello World</string>
    <string name="logo">Auto4Less</string>
    <string name="description">Welcome to Auto4Less !</string>
    <string name="hint">Enter a car model here</string>
    <string name="go">Go</string>
    <string name="view_your_saved_cars">Saved Cars</string>
    <string name="chatlog">Go to chat</string>
    <string name="save_to_database">Save To Database</string>
    <string name="SendButton">Send</string>
    <string name="ReceiveButton">Receive</string>
    <string name="Message">Type here...</string>
    <string name="buy">Buy</string>
    <string name="view_details">Google Details</string>
    <string name="model_id">Model ID: </string>
    <string name="make_id">Make ID: </string>
    <string name="t_about">About</string>
    <string name="open" translatable="false" />
    <string name="close" translatable="false" />
    <string name="help">Welcome to Help section !
        You can put the mode you want to search in the
        search bar. You can now click on the details to
        have more informations about the car. You can also
        add the car to review it later ! And if you liked it,
        you can buy it by simply click the Buy button, which
        gonna direct you to Auto Trader link.</string>
    <string name="about" translatable="false">
                    Jamal Harake.
                    Student from Algonquin College.
                    Final project, Car Manufacture.
                    2021-04-10.</string>
</resources>